--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.1",
