--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "color-hash": "^1.0.3",
     "history": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.14.1",
