--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "color-hash": "^1.0.3",
     "history": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
